tests/ui/delegation/duplicate-definition-inside-trait-impl.stderr
error[E0201]: duplicate definitions with name `foo`:
  --> $DIR/duplicate-definition-inside-trait-impl.rs:19:5
   |
LL |     fn foo(&self) -> u32 { 0 }
   |     -------------------------- item in trait
...
LL |     reuse to_reuse::foo { self }
   |     ---------------------------- previous definition here
LL |     reuse Trait::foo;
   |     ^^^^^^^^^^^^^^^^^ duplicate definition

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0201`.
